Bug 320111 - kmail composer does not include mail signature when using an external editor
Summary: kmail composer does not include mail signature when using an external editor
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.10.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 320280 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-21 20:30 UTC by Roman Fietze
Modified: 2013-05-30 06:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Fietze 2013-05-21 20:30:01 UTC
The correct and complete mail signature (double dash, space, text, etc.) will be printed at the bottom of the composer's messae window when a new mail is being started. This is true wheter I use an external editor or not.

When I use the internal editor I can just type above that signature an everything is fine.

But when I use an external editor the signature is gone in the moment when I leave the external editor.


Reproducible: Always
Comment 1 Laurent Montel 2013-05-22 08:09:07 UTC
I confirm it .Will look at it soon
Comment 2 Laurent Montel 2013-05-26 17:09:38 UTC
*** Bug 320280 has been marked as a duplicate of this bug. ***
Comment 3 Laurent Montel 2013-05-30 06:20:40 UTC
Git commit bd4013404a1742083aa2829d155b02808ba8c21f by Montel Laurent.
Committed on 30/05/2013 at 08:20.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 320111 - kmail composer does not include mail signature when using an external editor

FIXED-IN: 4.10.4

M  +4    -3    kmail/kmcomposewin.cpp
M  +1    -2    messagecomposer/kmeditor.h
M  +3    -0    messagecomposer/signaturecontroller.cpp
M  +1    -0    messagecomposer/signaturecontroller.h

http://commits.kde.org/kdepim/bd4013404a1742083aa2829d155b02808ba8c21f