Fix Bug 320111 - kmail composer does not include mail signature when using an external editor

FIXED-IN: 4.10.4
BUG: 320111